Closed Bug 1859576 Opened 2 years ago Closed 2 years ago

When upgrading schemeless URLs from the address bar, Firefox does not log to the web developer tools

Categories

(Core :: DOM: Security, defect, P3)

defect

Tracking

()

VERIFIED FIXED
121 Branch
Tracking Status
firefox121 --- verified

People

(Reporter: freddy, Assigned: maltejur)

References

Details

(Whiteboard: [domsecurity-active])

Attachments

(1 file)

STR:

  • Enable dom.security.https_first_schemeless
  • Open the developer tools console
  • Go to a website without a scheme (eg., example.com)

Expected behavior:

  • We log that we upgraded a URL without a scheme to HTTPS

Actual behavior:

Severity: -- → S3
Priority: -- → P3

Malte, can you take a look?

Flags: needinfo?(mjurgens)
Assignee: nobody → mjurgens
Status: NEW → ASSIGNED
Flags: needinfo?(mjurgens)
Whiteboard: [domsecurity-active]
Pushed by fbraun@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/92e66519460e Try to log HTTPS-Only/First messages to triggering window of loadinfo if inner window does not exist yet r=freddyb
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
QA Whiteboard: [qa-121b-p2]

Reproduced the issue with 120.0a1 (2023-10-17) on Windows 10x64. After following STR from comment 0 no log message is displayed in the web console.
The issue is verified fixed with Firefox 121.0 on Windows 10x64, macOS 12 and Ubuntu 22. The HTTPS-First Mode: Upgrading URL loaded in the address bar without explicit protocol scheme to use HTTPS. log message is displayed in the web console after following steps from comment 0.

Status: RESOLVED → VERIFIED
Has STR: --- → yes
QA Whiteboard: [qa-121b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: