Bug 1859576 - Try to log HTTPS-Only/First messages to triggering window of loadinfo if inner window does not exist yet r=freddyb

Differential Revision: https://phabricator.services.mozilla.com/D191272